  - Fix onPlayerFishEvent double negative, courtesy of Warriorrrr with PR #4547 (First-Time Contributor!)
  - New Config Option: town.default_neutral
    - Default: false
    - Default neutral status of the town (are new towns neutral by default?)
  - Do not shade in jetbrain annotations, courtesy of silverwolfg11 with PR #4528.
0.96.5.5:
  - API: ResidentJailEvent & ResidentUnjailEvent courtesy of Kovalskki with PR #4560 (First-Time Contributor!)
  - Fix plot group's setting plot type showing message for each plot in the group (when there was no cost to set the type.)
  - Fix cactus no longer hurting minecarts.
    - Closes #4561.
  - Fix null UUID on NationAddTownEvent, courtesy of silverwolfg11 with PR #4559.
  - Fix not being able to set town and nation names.
    - Closes #4567.
  - Create TownPreUnclaimCmdEvent, Relocate and extend Town(Pre)UnclaimEvents, courtesy of TheFlagCourier with PR #4537.
  - API: Add NationPreTownKickEvent which extends the NationPreTownLeaveEvent.
  - Clean up the nationKick method & use translatable message in more cancellable events.
  - Deprecate getMaxPurchedBlocks and replace with getMaxPurchasedBlocks, courtesy of Momshroom with PR #4572.
  - Update es-419.yml to 0.93, courtesy of EuGNosii with PR #4573.
  - Backend Resident UUID Implementation, courtesy of silverwolfg11 with PR #4510.
    - Creates methods to get Resident objects via a player UUID.
	- Create register / unregister methods for residents.
  - Placeholder: %townyadvanced_player_location_town_or_wildname%
    - Displays either the townname at the location or the wilderness name.
  - Placeholder: %townyadvanced_player_location_formattedtown_or_wildname%
    - Displays either the formatted townname at the location or the wilderness name.
  - Placeholder: %townyadvanced_player_location_town_prefix%
    - Displays the town's prefix or blank.
  - Placeholder: %townyadvanced_player_location_town_postfix%
    - Displays the town's postfix or blank.