@@ -5540,3 +5540,5 @@ v0.92.0.11:
     - Displays the town's prefix or blank.
   - Placeholder: %townyadvanced_player_location_town_postfix%
     - Displays the town's postfix or blank.
+  - Placeholder: %townyadvanced_player_location_pvp%
+    - Displays (PVP) or blank, depending on pvp status of the location.
